# ToT-schedule

./: .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
.github/workflows/: release-desktop.yml  release-macos-arm64.yml
scripts/: add-fix-script-to-dmg.sh  build-dmg.sh  create-win7-updater-manifest.mjs  修复已损坏.command
src/: App.tsx  Website.tsx  icons.tsx  index.css  main.tsx  storage.ts  types.ts  website.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.win7.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: win7-legacy-hooks.nsh
src/components/: CalendarSection.tsx  NaturalLanguageInput.tsx  PlannerDatePicker.tsx  Select.tsx  TaskLibrary.tsx  UpdateChecker.tsx
